add optimiz photo and images fix

--- a/projects.html
+++ b/projects.html
@@ -42,10 +42,8 @@
                     and live page performance.
                   </p>
                 </div>
-                <picture>
-                  <img class="project-card__image" src="images/projects/web_studio.jpg" alt="image website"
-                    srcset="images/projects/web_studio@2x.jpg 2x">
-                </picture>
+                <img class="project-card__image" src="images/projects/web_studio.jpg" alt="image website"
+                  srcset="images/projects/web_studio@2x.jpg 2x">
               </div>
               <div class="project-card__cont">
                 <h3 class="project-card__title">Web studio</h3>
@@ -64,10 +62,8 @@
                     Github.
                   </p>
                 </div>
-                <picture>
-                  <img class="project-card__image" src="images/projects/image_gallery.jpg" alt="image website"
-                    srcset="images/projects/image_gallery@2x.jpg 2x">
-                </picture>
+                <img class="project-card__image" src="images/projects/image_gallery.jpg" alt="image website"
+                  srcset="images/projects/image_gallery@2x.jpg 2x">
               </div>
               <div class="project-card__cont">
                 <h3 class="project-card__title">
@@ -88,14 +84,12 @@
                     App component with Public and Private routes, AuthPage page logic. Deploy project on Github.
                   </p>
                 </div>
-                <picture>
-                  <img class="project-card__image" src="images/projects/phone_book.jpg" alt="image website"
-                    srcset="images/projects/phone_book@2x.jpg 2x">
-                </picture>
+                <img class="project-card__image" src="images/projects/phone_book.jpg" alt="image website"
+                  srcset="images/projects/phone_book@2x.jpg 2x">
               </div>
               <div class="project-card__cont">
                 <h3 class="project-card__title">Phone book</h3>
-                <p class="project-card__description">React Redux Toolkit</p>
+                <p class="project-card__description">React Redux</p>
               </div>
             </article>
           </a>
